# Multiomic_integration_antimicrobial_resistance

./: .gitignore  README.md  r_trials.ipynb  requirements.txt  training_nn.ipynb
R_scripts/: install_requirements.R  targets_csv.R
bash_scripts/: transform_data.sh
data_transformation/: data_transformation.py  test_data_transformation.py
functions/: SOURCES.txt  __init__.py  data_transformation.py  pyproject.toml  train_test_split.py
functions/datatransf/: __init__.py  data_transformation.py  ml_functions.py
functions/datatransf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml_algorithms/: ml_algorithms.py
ml_algorithms/results/: log_reg.csv  log_reg_relevant_features.csv  svm_paper_cv.csv
ml_algorithms/results/lda/: lda_counts.csv  qda_counts.csv
ml_algorithms/results/logistic_regression/: log_reg_scores.csv
ml_algorithms/results/pca/: pca_Cef.csv  pca_Mer.csv
ml_algorithms/results/svc/: svc_counts.csv  svc_counts_linear.csv  svc_counts_poly.csv  svc_counts_rbf.csv  svc_scores.csv  svc_scores_linear.csv  svc_scores_rbf.csv
neural_networks/: neural_networks.py
neural_networks/results/single_features/: genexp.csv
pipelines/: ml_algorithms.py  neural_networks.py
pipelines/ml_functions/: ml_functions.py  test_ml_functions.py
pipelines/results/knn/: best_values_of_k.csv  knn_counts.csv  knn_scores.csv
pipelines/results/lda/: lda_scores.csv  qda_scores.csv
pipelines/results/logistic_regression/: log_reg_counts.csv  (+1 more)
tests/: test_data_transformation.py  test_dataset_split.py  test_ml_functions.py
transformed_data/features/: gpa_features_vect.npz
(+31 files in other folders)
